--- a/dbagricultura/src/app/globals.css
+++ b/dbagricultura/src/app/globals.css
@@ -4,6 +4,7 @@
 
 @import "./styles/text";
 @import "./styles/image";
+@import "./styles/card";
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
